plugins {
    id 'java-library'
    id 'net.neoforged.moddev' version '2.0.147'
}
version = mod_version
group = 'com.pancake'
base { archivesName = 'SurvivingTheAftermath' }
java.toolchain.languageVersion = JavaLanguageVersion.of(21)
sourceSets {
    main.resources.srcDir 'src/generated/resources'
    gametest {
        compileClasspath += sourceSets.main.output + sourceSets.main.compileClasspath
        runtimeClasspath += sourceSets.main.output + sourceSets.main.runtimeClasspath
    }
}
neoForge {
    version = neo_version
    runs {
        client { client() }
        server { server(); programArgument '--nogui' }
        gameTestServer {
            type = 'gameTestServer'
            sourceSet = sourceSets.gametest
            gameDirectory = file('run-gametest')
            systemProperty 'neoforge.enabledGameTestNamespaces', 'surviving_the_aftermath'
        }
        data {
            data()
            programArguments.addAll '--mod', 'surviving_the_aftermath', '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }
        configureEach { logLevel = org.slf4j.event.Level.INFO }
    }
    mods {
        surviving_the_aftermath { sourceSet(sourceSets.main); sourceSet(sourceSets.gametest) }
    }
}
repositories { maven { url = 'https://api.modrinth.com/maven'; content { includeGroup 'maven.modrinth' } } }
dependencies {
    if (project.hasProperty('withKubeJS')) {
            }
}
tasks.withType(JavaCompile).configureEach { options.encoding = 'UTF-8'; options.compilerArgs += ['-Xmaxerrs', '500'] }
tasks.named('processResources', ProcessResources) {
    filteringCharset = 'UTF-8'
    inputs.property 'version', project.version
    filesMatching('META-INF/neoforge.mods.toml') { expand 'mod_version': project.version }
}

if (project.hasProperty('withKubeJS')) {
    tasks.register('prepareKubeJSTests', Copy) {
        from 'src/gametest/kubejs'
        into 'run-gametest/kubejs'
    }
    tasks.named('runGameTestServer') { dependsOn 'prepareKubeJSTests' }
}

sourceSets.main.resources.exclude '**/.cache/**'

// Exercise Minecraft's client Ogg decoder and late-listener seeking without launching a window.
tasks.register('clientAudioCheckClasspath', Jar) {
    dependsOn 'gametestClasses'
    archiveFileName = 'client-audio-check-classpath.jar'
    destinationDirectory = layout.buildDirectory.dir('client-audio-check')
    doFirst {
        manifest.attributes('Class-Path': sourceSets.gametest.runtimeClasspath.files.collect { it.toURI().toString() }.join(' '))
    }
}
tasks.register('clientAudioCheck', JavaExec) {
    dependsOn 'gametestClasses', 'clientAudioCheckClasspath'
    javaLauncher = javaToolchains.launcherFor { languageVersion = JavaLanguageVersion.of(21) }
    classpath = files(tasks.named('clientAudioCheckClasspath').flatMap { it.archiveFile })
    mainClass = 'com.pancake.surviving_the_aftermath.ClientAudioCheck'
    maxHeapSize = '512m'
}

// Include the MIT license and original copyright notice in distributed binaries.
tasks.named('jar', Jar) { from('LICENSE.txt') }
